crates/php-parser/tests/snapshots/corpus__stmt_haltcompiler_2.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Variable": "a"
          },
          "span": {
            "start": 7,
            "end": 9
          }
        }
      },
      "span": {
        "start": 7,
        "end": 11
      }
    },
    {
      "kind": {
        "HaltCompiler": "Hallo World!"
      },
      "span": {
        "start": 11,
        "end": 41
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 41
  }
}
