crates/php-parser/tests/snapshots/corpus__stmt_loop_do.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "DoWhile": {
          "body": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 10,
              "end": 14
            }
          },
          "condition": {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 22,
              "end": 24
            }
          }
        }
      },
      "span": {
        "start": 7,
        "end": 26
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 26
  }
}
